small fixes for video.js v7. works at least with v5.20.x and v7.4.x small other fixes (z-index)

--- a/videojs.thumbnails.css
+++ b/videojs.thumbnails.css
@@ -50,6 +50,10 @@
   opacity: 0;
 }
 
+.video-js .vjs-progress-control .vjs-mouse-display {
+  z-index: 2;
+}
+
 .video-js .vjs-mouse-display:after {
   top: auto;
   bottom: 3.5em;
